--- a/task2_evolution/evolutionary/one_max_report.yaml
+++ b/task2_evolution/evolutionary/one_max_report.yaml
@@ -1,5 +1,5 @@
 population_size: 170
-generation_limit: 300
+generation_limit: 100
 target_fitness: 1.0
 plotting: true
 logging: true
@@ -7,13 +7,13 @@ logging: true
 ea: !!python/object:ea_impl.one_max_problem.OneMaxEA {}
 
 adult_selector: !!python/object:ea.adult_selection.FullGenerationalReplacementAdultSelector {}
-parent_selector: !!python/object:ea.parent_selection.FitnessProportionateParentSelector {}
+parent_selector: !!python/object:ea.parent_selection.TournamentParentSelector {group_size: 5, epsilon: 0.1}
 
 individual_factory: !!python/object:ea_impl.one_max_problem.OneMaxIndividualFactory {}
 phenotype_convertor: !!python/object:ea.individual.BasicPhenotypeConvertor {}
 fitness_evaluator: !!python/object:ea_impl.one_max_problem.OneMaxFitnessEvaluator {}
 
-mutation_strategy: !!python/object:ea.mutation.BinaryVectorInversionMutation {mutation_rate: 0.001}
+mutation_strategy: !!python/object:ea.mutation.BinaryVectorInversionMutation {mutation_rate: 0.01}
 crossover_strategy: !!python/object:ea.crossover.OnePointCrossover {crossover_rate: 0.9}
 
 # task-specific parameters
